Beispielinteraktion worked